# goit-python-web-hw-13

./: .gitignore
Django/: README.md  pyproject.toml
Django/quotes/quoteapp/: forms.py  models.py  urls.py  views.py
Django/quotes/quoteapp/migrations/: 0001_initial.py
Django/quotes/quoteapp/templates/quoteapp/: author.html  author_detail.html  base.html  index.html  quote.html  quote_detail.html
Django/quotes/quotes/: settings.py
Django/quotes/users/: apps.py  forms.py  views.py
Django/quotes/users/migrations/: 0001_initial.py
Django/quotes/users/templates/users/: signup.html
REST_API/: main.py  pyproject.toml
REST_API/postgres-data/: postmaster.pid
REST_API/postgres-data/global/: pg_control
REST_API/postgres-data/pg_stat_tmp/: db_0.stat  db_13481.stat  global.stat
REST_API/src/: schemas.py
REST_API/src/repository/: contacts.py
REST_API/src/routes/: auth.py  contacts.py
REST_API/src/services/: auth.py  email.py
