[tool.poetry]
name = "hw10"
version = "0.1.0"
description = ""
authors = ["UstymenkoOB <50136631+UstymenkoOB@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = "^4.2.5"
psycopg2 = "^2.9.8"
pillow = "^10.0.1"
django-environ = "^0.11.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
